--- a/public/cv.html
+++ b/public/cv.html
@@ -21,9 +21,9 @@
 
 <h2>SOFTWARE ENGINEER (2015&ndash;)</h2>
 
-<p>I help a tiny firm grow fast and make a difference to the way that children's nurseries help their charges to develop.</p>
+<p>I help a small firm grow and make a difference to the way that children's nurseries help their kids to develop.</p>
 
-<p>I have: managed their transition to the cloud, allowing them to double in size while improving performance and reliability; managed their approach to dealing with GDPR compliance, delivering the `best work they have seen` in the eyes of several of our customer's data protection officers; improved the software development processes to continuously deliver the right improvements as the size of the team has grown; supported the founders in making difficult decisions around pricing and international expansion.</p>
+<p>I am in charge of the firm's technology, manage a team of six engineers, and work directly with the founders on most aspects of the business. In particular, I have: managed their transition to the cloud, allowing them to double in size while improving performance and reliability; managed their approach to dealing with GDPR compliance, delivering the `best work they have seen` in the eyes of several of our customer's data protection officers; improved the software development processes to continuously deliver the right improvements as the size of the team has grown; supported the founders in making difficult decisions around staffing, pricing and international expansion.</p>
 
 <h2>CONSULTANT (2015&ndash;)</h2>
 
