Updated programming cv

--- a/public/cv-programming.html
+++ b/public/cv-programming.html
@@ -240,7 +240,33 @@
   <div class='list'><div class='year'>1996&ndash;2000</div>University of Cambridge &mdash; BA MEng Engineering, 1st class.</div>
   <div class='list'><div class='year'>1990&ndash;1995</div>Millfield School &mdash; Scholarship, 10 GCSES &amp; 4&half; A-levels at grade A.</div>
 
-  <h2>Skills</h2>
+  <h2>Management Skills</h2>
+
+  <h3>Teams</h3>
+
+  <p>I have managed teams for more than seven years. The teams have been of up to thrity people. Some have been teams of engineers. Others have been mixed teams including different specialisms and layers of middle management.</p>
+
+  <h3>Working cultures</h3>
+
+  <p>I have worked as a civil servant, as a strategy consultant, in various engineering roles, as a university teaching assistant and for small start-ups. I have worked on projects in Singapore, Hong Kong, Canada, the USA, the Netherlands and Switzerland.</p>
+
+  <h3>Money</h3>
+
+  <p>I have been responsible for budgets of £1&thinsp;million+. I can do a NPV valuation and draw up a simple set of accounts.</p>
+
+  <h3>Project Management</h3>
+
+  <p>I have managed projects for more than ten years, from quick pieces of work with deadlines hours or days away to multi-year activities that involved many strands, stakeholders, and teams.</p> 
+
+  <h3>Communication</h3>
+
+  <p>I have presented to groups of 700+ people, on technical and non-technical subjects, to benign and to hostile questioning. I have written academic papers, blog posts and reports.</p>
+
+  <h3>Teaching</h3>
+
+  <p>I enjoy coachng my team and my peers. I have also taught maths, materials and the control and organisation of manufacturing systems at university level.</p>
+
+  <h2>Programming Skills</h2>
 
   <section>
     <h3>Languages</h3>
@@ -248,8 +274,8 @@
       <li><a href='http://www.ruby-lang.org'>Ruby</a> &mdash; I've used this for substantial projects since 2003.</li>
       <li><a href='http://php.net'>PHP</a> &mdash; I've developed complex high availability, high volume web applications.</a></li>
       <li><a href='https://developer.mozilla.org/en-US/docs/Web/JavaScript'>Javascript</a>, <a href='https://developer.mozilla.org/en-US/docs/Web/HTML'>html</a> &amp; <a href='https://developer.mozilla.org/en-US/docs/Web/CSS'>css</a> &mdash; Both single-page and complex client-server web applications.</li>
-      <li><a href='http://www.android.com'>Java / Android</a> &mdash; I've developed complex Android apps.</a></li>
       <li><a href='http://www.apple.com/developer'>Objective-C / Swift / iOS</a> &mdash; I've developed complex iOS apps.</a></li>
+      <li><a href='http://www.android.com'>Java / Android</a> &mdash; I'm less experienced than with iOS, but have developed Android apps.</a></li>
       <li><a href='http://www.open-std.org/jtc1/sc22/wg14/www/docs/n1570.pdf'>C</a>, <a href='https://golang.org'>Go</a> &mdash; I've written a few high performance routines and small projects.</li>
     </ul>
   </section>
@@ -270,8 +296,7 @@
     <ul>
       <li><a href='http://aws.amazon.com'>AWS</a> &mdash; I have managed high volume, high availability sites used EC2, spot fleets, auto-scaling, load balancers, S3, CloudFront, SQS, SES, CloudFormation, and Route 53. I have designed high availability and high security architectures. I have written custom tooling to interface with AWS systems.</li>
       <li><a href=''>Web servers</a> &mdash; I have set up and maintained many servers.</li>
-      <li><a href='http://www.postgresql.org'>Postgres</a> &amp; <a href=''>MySQL</a> &mdash; I have used both in large customer web applications. I know how to optimise performance and design effective data structures.</li>
-      <li><a href='https://www.mongodb.org'>mongoDB</a> &amp; <a href='https://www.firebase.com'>Firebase</a> &mdash; I have used both for small applications.</li>
+      <li><a href=''>MySQL</a> &mdash; I have used databases in large customer web applications. I know how to optimise performance and design effective data structures.</li>
       <li><a href='http://www.ecma-international.org/publications/standards/Ecma-376.htm'>Excel</a> &mdash; I know how its file format works and how to interface it with other systems. I have written code that translates Excel to and from other programming languages.</li>
       <li>Scripting languages &mdash; I've automated a range of processes both simple and complex: continuous deployment; test pipelines; issue management; security checking; data management. 
       <li><a href='http://www.vim.org'>VIM</a> &mdash; I use it every day.</li>
@@ -290,11 +315,11 @@
       <figcaption>Tapestry</figcaption>
     </figure>
 
-    <p>A <a href='http://tapestry.info'>website</a>, <a href=''>Android app</a> and <a href=''>iOS app</a> that children's nurseries use to plan, record and communicate how their charges develop. More than 16&thinsp;000 schools and nurseries pay for the service. </p>
+    <p>A <a href='http://tapestry.info'>website</a>, <a href=''>Android app</a> and <a href=''>iOS app</a> that children's nurseries use to plan, record and communicate how their charges develop. More than 17&thinsp;000 schools and nurseries pay for the service. </p>
     
-    <p>It contains structured and unstructured data, pictures and videos relating to more than 800&thinsp;000 children and has more than 900 000 active users. Written in PHP, Javascript, Java and Swift and hosted on AWS.</p>
+    <p>It contains structured and unstructured data, pictures and videos relating to more than 900&thinsp;000 children and has more than 1 000 000 active users. Written in PHP, Javascript, Java and Swift and hosted on AWS.</p>
     
-    <p>I managed bringing app development in-house; managed the migration to the cloud; managed the process of complying with the GDPR; developed tooling and processing to cope with growth in demand and in team-size; designed a substantial part of the architecture and contributed code and to all parts of the site and apps.</p>
+    <p>I managed the team of six software engineers; I managed bringing app development in-house; managed the migration to the cloud; managed the process of complying with the GDPR; developed tooling and processing to cope with growth in demand and in team-size; designed a substantial part of the architecture and contributed code and to all parts of the site and apps.</p>
 
     <p>Key features:</p>
 
@@ -435,31 +460,6 @@
     </ul>
   </section>
 
-  <h2>Wider experience</h2>
-
-  <h3>Working cultures</h3>
-
-  <p>I have worked as a civil servant, as a strategy consultant, in various engineering roles, as a university teaching assistant and for small start-ups. I have worked on projects in Singapore, Hong Kong, Canada, the USA, the Netherlands and Switzerland.</p>
-
-  <h3>Money</h3>
-
-  <p> I have been routinely responsible for budgets of £1&thinsp;million or more. I can do a NPV valuation of a business or project and draw up a simple set of accounts.</p>
-
-  <h3>Project Management</h3>
-
-  <p>I have managed projects, from quick pieces of work with deadlines hours or days away to multi-year activities that involved many strands, many stakeholders, Gantt charts &amp; risk registers</p> 
-
-  <h3>Communication</h3>
-
-  <p>I have presented to groups of up to 700 people, on technical and non-technical subjects, to benign and to hostile questioning. I have written academic papers, blog posts and reports.</p>
-
-  <h3>Teams</h3>
-
-  <p>I have routinely managed teams of ten including technical specialists, economists and generalists at a range of levels.</p>
-
-  <h3>Teaching</h3>
-
-  <p>I have taught maths, materials and the control and organisation of manufacturing systems at university level.</p>
 
   <h2>Further detail</h2>
 
