--- a/public/cv-programming.html
+++ b/public/cv-programming.html
@@ -244,7 +244,7 @@
 
   <h3>Teams</h3>
 
-  <p>I have managed teams for more than seven years. The teams have been of up to thrity people. Some have been teams of engineers. Others have been mixed teams including different specialisms and layers of middle management.</p>
+  <p>I have managed teams for more than seven years. The teams have been of up to thirty people. Some have been teams of engineers. Others have been mixed teams including different specialisms and layers of middle management.</p>
 
   <h3>Working cultures</h3>
 
@@ -264,7 +264,7 @@
 
   <h3>Teaching</h3>
 
-  <p>I enjoy coachng my team and my peers. I have also taught maths, materials and the control and organisation of manufacturing systems at university level.</p>
+  <p>I enjoy coaching my team and my peers. I have also taught maths, materials and the control and organisation of manufacturing systems at university level.</p>
 
   <h2>Programming Skills</h2>
 
