--- a/public/cv-programming.html
+++ b/public/cv-programming.html
@@ -4,7 +4,7 @@
 	<meta http-equiv="Content-Type" content="text/html; charset=utf-8">
   <link href="http://fonts.googleapis.com/css?family=Lato:300" rel="stylesheet" type="text/css">
   <link href='http://fonts.googleapis.com/css?family=Merriweather' rel='stylesheet' type='text/css'> 
-	<title>CV Thomas Counsell August 2019 - Coding</title>
+	<title>CV Thomas Counsell June 2020 - Coding</title>
   <style>
     /* Sort out the fonts and spacing first */
     * { 
@@ -238,13 +238,13 @@
 
   <div class='list'><div class='year'>2003&ndash;2007</div>University of Cambridge &mdash; PhD Engineering.</div>
   <div class='list'><div class='year'>1996&ndash;2000</div>University of Cambridge &mdash; BA MEng Engineering, 1st class.</div>
-  <div class='list'><div class='year'>1990&ndash;1995</div>Millfield School &mdash; Scholarship, 10 GCSES &amp; 4&half; A-levels at grade A.</div>
+  <div class='list'><div class='year'>1990&ndash;1995</div>Millfield School &mdash; Scholarship, 10 GCSEs &amp; 4&half; A-levels at grade A.</div>
 
   <h2>Management Skills</h2>
 
   <h3>Teams</h3>
 
-  <p>I have managed teams for more than seven years. The teams have been of up to thirty people. Some have been teams of engineers. Others have been mixed teams including different specialisms and layers of middle management.</p>
+  <p>I have managed teams for more than eight years. The teams have been of up to thirty people. Some have been teams of engineers. Others have been mixed teams including different specialisms and layers of middle management.</p>
 
   <h3>Working cultures</h3>
 
@@ -315,11 +315,11 @@
       <figcaption>Tapestry</figcaption>
     </figure>
 
-    <p>A <a href='http://tapestry.info'>website</a>, <a href=''>Android app</a> and <a href=''>iOS app</a> that children's nurseries use to plan, record and communicate how their charges develop. More than 17&thinsp;000 schools and nurseries pay for the service. </p>
+    <p>A <a href='http://tapestry.info'>website</a>, Android app and iOS app that children's nurseries use to plan, record and communicate how their charges develop. More than 17&thinsp;000 schools and nurseries pay for the service. </p>
     
-    <p>It contains structured and unstructured data, pictures and videos relating to more than 900&thinsp;000 children and has more than 1 000 000 active users. Written in PHP, Javascript, Java and Swift and hosted on AWS.</p>
+    <p>It contains structured and unstructured data, pictures and videos relating to more than 900&thinsp;000 children and has more than 1&thinsp;000&thinsp;000 active users. Written in PHP, Javascript, Java and Swift and hosted on AWS.</p>
     
-    <p>I managed the team of six software engineers; I managed bringing app development in-house; managed the migration to the cloud; managed the process of complying with the GDPR; developed tooling and processing to cope with growth in demand and in team-size; designed a substantial part of the architecture and contributed code and to all parts of the site and apps.</p>
+    <p>I manage the team of eight software engineers; I brought app development in-house; migrated to the cloud; made us compliant with the GDPR; developed tooling and processing to cope with growth in demand and in team-size; designed a substantial part of the architecture and contributed code and to all parts of the site and apps.</p>
 
     <p>Key features:</p>
 
