--- a/public/cv.html
+++ b/public/cv.html
@@ -3,7 +3,7 @@
 	<meta http-equiv="Content-Type" content="text/html; charset=utf-8">
 	<link href="cv.css" media="screen" rel="stylesheet" type="text/css"></link>
 	<link href="cv.css" media="print" rel="stylesheet" type="text/css"></link>
-	<title>CV Thomas Counsell August 2019</title>
+	<title>CV Thomas Counsell June 2020</title>
 </head>
 <body>
 <h1>Dr Thomas Counsell</h1> 
@@ -16,14 +16,14 @@
 <table>
   <tr><td>2003&ndash;2007</td><td>University of Cambridge, Department of Engineering&mdash;PhD.</td></tr>
   <tr><td>1996&ndash;2000</td><td>University of Cambridge&mdash;BA MEng Manufacturing Engineering Tripos 1st class.</td></tr>
-  <tr><td>1990&ndash;1995</td><td>Millfield School, Somerset, UK&mdash;Scholarship, 10 GCSES &amp; 4&half; A-levels at grade A.</td></tr>
+  <tr><td>1990&ndash;1995</td><td>Millfield School, Somerset, UK&mdash;Scholarship, 10 GCSEs &amp; 4&half; A-levels at grade A.</td></tr>
 </table>
 
-<h2>SOFTWARE ENGINEER (2015&ndash;)</h2>
+<h2>CHIEF ENGINEER (2015&ndash;)</h2>
 
 <p>I help a small firm grow and make a difference to the way that children's nurseries help their kids to develop.</p>
 
-<p>I am in charge of the firm's technology, manage a team of six engineers, and work directly with the founders on most aspects of the business. In particular, I have: managed their transition to the cloud, allowing them to double in size while improving performance and reliability; managed their approach to dealing with GDPR compliance, delivering the `best work they have seen` in the eyes of several of our customer's data protection officers; improved the software development processes to continuously deliver the right improvements as the size of the team has grown; supported the founders in making difficult decisions around staffing, pricing and international expansion.</p>
+<p>I am in charge of the firm's technology, infrastructure and eight software engineers. I work directly with the founders on most aspects of the business. I have helped them triple in size to just over a million active users while remaining profitable, reliable, secure and loved.
 
 <h2>CONSULTANT (2015&ndash;)</h2>
 
@@ -31,7 +31,7 @@
 
 <h2>CIVIL SERVANT (2010&ndash;2015)</h2>
 
-<p>I held five posts at the UK Department of Energy & Climate Change</p>
+<p>I held five posts at the UK Department of Energy &amp; Climate Change</p>
 
 <h3>Deputy Director, Analysis</h3>
 
@@ -42,7 +42,7 @@
 
 <p>I ran a nine person team and £2&thinsp;million programme providing advice to other governments on how to think about the future of their energy systems. The team won a Civil Service Award, jointly with the Foreign Office, for their approach.</p>
 
-<p>Due to the departure of a colleague I also briefly & simultaneously managed another team during a challenging period. I was responsible for an additional thirty staff and £200&thinsp;million of overseas development aid.</p>
+<p>Due to the departure of a colleague I also briefly &amp; simultaneously managed another team during a challenging period. I was responsible for an additional thirty staff and £200&thinsp;million of overseas development aid.</p>
 
 
 <h3>Deputy Director, Strategy</h3>
@@ -51,7 +51,7 @@
 
 <h3>Grade 6, Head of Engineering Team</h3>
 
-<p>I formed and ran the Department of Energy &amp; Climate Change's first central engineering team. This team of ten spanned the engineering disciplines and provided technical advice to the department on carbon capture & storage, bioenergy sustainability, nuclear research, spending to support innovation, the potential for energy demand reduction and the challenges of renewables deployment.</p>
+<p>I formed and ran the Department of Energy &amp; Climate Change's first central engineering team. This team of ten spanned the engineering disciplines and provided technical advice to the department on carbon capture &amp; storage, bioenergy sustainability, nuclear research, spending to support innovation, the potential for energy demand reduction and the challenges of renewables deployment.</p>
 
 <h3>Grade 7, Assistant to the Chief Scientific Advisor</h3>
 
