CV January 2021 updates

--- a/public/cv.html
+++ b/public/cv.html
@@ -3,7 +3,7 @@
 	<meta http-equiv="Content-Type" content="text/html; charset=utf-8">
 	<link href="cv.css" media="screen" rel="stylesheet" type="text/css"></link>
 	<link href="cv.css" media="print" rel="stylesheet" type="text/css"></link>
-	<title>CV Thomas Counsell June 2020</title>
+	<title>CV Thomas Counsell Jan 2021</title>
 </head>
 <body>
 <h1>Dr Thomas Counsell</h1> 
@@ -21,13 +21,13 @@
 
 <h2>CHIEF ENGINEER (2015&ndash;)</h2>
 
-<p>I help a small firm grow and make a difference to the way that children's nurseries help their kids to develop.</p>
+<p>I help a small firm to make a difference to the way that children's nurseries & primary schools help their kids to develop.</p>
 
-<p>I am in charge of the firm's technology, infrastructure and eight software engineers. I work directly with the founders on most aspects of the business. I have helped them triple in size to just over a million active users while remaining profitable, reliable, secure and loved.
+<p>I am in charge of the firm's product (known as Tapestry), £1&thinsp;million infrastructure spend, and nine software engineers. I work directly with the founders on most aspects of the business. I have helped them grow the business to care for just over a million children while remaining profitable, reliable, secure and loved.
 
 <h2>CONSULTANT (2015&ndash;)</h2>
 
-<p>In my spare time I provide advice and hands-on support to several groups: to fix troublesome analysis so that it provides useful answers and to present the results in a way that is engaging and useful. I have particular expertise in turning Excel based analysis into interactive online tools.</p>
+<p>In my spare time, I provide advice and hands-on support to several groups: to fix troublesome analysis so that it provides useful answers and to present the results in a way that is engaging and useful. I have particular expertise in turning Excel-based analysis into interactive online tools.</p>
 
 <h2>CIVIL SERVANT (2010&ndash;2015)</h2>
 
@@ -35,15 +35,13 @@
 
 <h3>Deputy Director, Analysis</h3>
 
-<p>Reporting to the Chief Economist, I acted as an analytic trouble shooter. In particular, I helped the team move from a traditional approach of considering a few long-range energy scenarios to being able to look for the common features, level of uncertainty and interesting exceptions amongst thousands of automatically generated scenarios.</p>
-
+<p>Reporting to the Chief Economist, I acted as an analytic troubleshooter. In particular, I helped the team move from a traditional approach of considering a few long-range energy scenarios to being able to look for the common features, level of uncertainty and interesting exceptions amongst thousands of automatically generated scenarios.</p>
 
 <h3>Deputy Director, International Climate Change</h3>
 
 <p>I ran a nine person team and £2&thinsp;million programme providing advice to other governments on how to think about the future of their energy systems. The team won a Civil Service Award, jointly with the Foreign Office, for their approach.</p>
 
 <p>Due to the departure of a colleague I also briefly &amp; simultaneously managed another team during a challenging period. I was responsible for an additional thirty staff and £200&thinsp;million of overseas development aid.</p>
-
 
 <h3>Deputy Director, Strategy</h3>
 
@@ -55,19 +53,19 @@
 
 <h3>Grade 7, Assistant to the Chief Scientific Advisor</h3>
 
-<p>I was recruited to the UK Department of Energy and Climate Change by David MacKay, the Chief Scientific Advisor, to work in his private office. I supported him with counsel, with rapid bits of analysis, in keeping track of initiatives inside and outside of the department and represented him when he was unavailable.</p>
+<p>I was recruited to the UK Department of Energy and Climate Change by David MacKay, the Chief Scientific Advisor, to work in his private office. I supported him with counsel, with rapid bits of analysis, in keeping track of initiatives inside and outside of the department and I represented him when he was unavailable.</p>
 
 <h2>STRATEGY MANAGER (2007&ndash;2010)</h2>
 
-<p>I was appointed as a strategy associate and then promoted to strategy manager at the Carbon Trust. I managed internal and external staff to create well received publications on climate change topics (four on the EU ETS with Michael Grub, one on the impact of tackling climate change on shareholder value and one on the scale of emissions triggered abroad by UK consumption of goods) and to help the CEO and COO to define elements of the Carbon Trust’s organisation and strategy (for example, how should the Carbon Trust support other governments in setting up Carbon Trust-like organisations? What could the Carbon Trust do to stimulate a green economic recovery?). I represented the Carbon Trust to industry and to government in the UK and abroad. I kept Carbon Trust staff briefed on policy developments, such the work of the Climate Change Committee, the carbon targets and budgets and the Low Carbon Transition Plan.</p>
+<p>I was appointed as a strategy associate and then promoted to strategy manager at the Carbon Trust. I managed internal and external staff to create well received publications on climate change topics (four on the EU ETS with Michael Grub, one on the impact of tackling climate change on shareholder value and one on the scale of emissions triggered abroad by UK consumption of goods) and to help the CEO and COO to define elements of the Carbon Trust’s organisation and strategy (for example, how should the Carbon Trust support other governments in setting up Carbon Trust-like organisations? What could the Carbon Trust do to stimulate a green economic recovery?). I represented the Carbon Trust to industry and to government in the UK and abroad. I kept Carbon Trust staff briefed on policy developments, such as the work of the Climate Change Committee, the carbon targets and budgets, and the Low Carbon Transition Plan.</p>
 
 <h2>ENGINEERING RESEARCHER (2003&ndash;2007)</h2>
-<p>I completed a PhD under the supervision of Dr Julian Allwood at the Department of Engineering at the University of Cambridge. I won funding for my research on the basis of my proposal and academic background. My research considered whether it would be possible
-to remove print from paper in a way that would allow used sheets to be fed back into a printer or photocopier and immediately reused. During this research I explored three distinct fields: solvents, in collaboration with the Department of Chemistry; lasers, in collaboration with the Bavarian Laser Centre and the Centre for Industrial Photonics; and high speed wear, in collaboration with the Production Processes Group. I published four peer reviewed journal articles. </p>
+<p>I completed a PhD under the supervision of Dr Julian Allwood at the Department of Engineering at the University of Cambridge. I won personal funding for the research which considered whether it would be possible
+to remove print from paper in a way that would allow used sheets to be fed back into a printer and immediately reused. During this research I explored three distinct fields: solvents, in collaboration with the Department of Chemistry; lasers, in collaboration with the Bavarian Laser Centre and the Centre for Industrial Photonics; and high speed wear, in collaboration with the Production Processes Group. I published four peer-reviewed journal articles. </p>
 
 <h2>ENGINEERING TEACHER (2003&ndash;2007)</h2>
 
-<p>I was appointed as a teaching assistant at the Cambridge University Engineering Department. I led visits, practicals, workshops and educational games for third and fourth year engineering students. I marked essays. I prepared and delivered lectures on, for example, industrial sustainability, the Toyota Production System, and process mapping. I supervised undergraduate engineers on materials science, on the organisation and control of manufacturing systems and on mathematics.</p>
+<p>I was appointed as a teaching assistant at the Cambridge University Engineering Department. I led visits, practicals, workshops and educational games for third- and fourth-year engineering students. I marked essays. I prepared and delivered lectures on, for example, industrial sustainability, the Toyota Production System, and process mapping. I supervised undergraduate engineers on materials science, on the organisation and control of manufacturing systems and on mathematics.</p>
 
 <h2>STRATEGY CONSULTANT (2000&ndash;2003)</h2>
 <p>I was appointed as an associate consultant and then promoted to consultant (their post-MBA level) at Marakon Associates. I managed small consulting teams and large groups of clients to answer questions of strategy and organisation. For example: I helped the CEO of a Canadian chocolate business to cut costs; I helped the CEO of an over the counter drugs business to understand the options for the growth, merger or sale of his business; and I helped a wholesale bank to fix its ineffective, multi-country, matrix organisation. My role became one of analytical trouble-shooter sent in to give drifting projects traction. Most work was done overseas.</p>
