--- a/public/cv.html
+++ b/public/cv.html
@@ -1,80 +1,151 @@
 <html>
+
 <head>
 	<meta http-equiv="Content-Type" content="text/html; charset=utf-8">
-	<link href="cv.css" media="screen" rel="stylesheet" type="text/css"></link>
-	<link href="cv.css" media="print" rel="stylesheet" type="text/css"></link>
-	<title>CV Thomas Counsell Jan 2021</title>
+	<link href="cv.css" media="screen" rel="stylesheet" type="text/css">
+	</link>
+	<link href="cv.css" media="print" rel="stylesheet" type="text/css">
+	</link>
+	<title>CV Thomas Counsell Dec 2021</title>
 </head>
+
 <body>
-<h1>Dr Thomas Counsell</h1> 
-<p id='contact'>65 Coventry Street, BN1 5PP&mdash; tom@counsell.org &mdash; 07976 360 423</p>
+	<h1>Dr Thomas Counsell</h1>
+	<p id='contact'>65 Coventry Street, BN1 5PP&mdash; tom@counsell.org &mdash; 07976 360 423</p>
 
-<div id='content'>
+	<div id='content'>
 
-<h2>Education</h2>
+		<h2>Education</h2>
 
-<table>
-  <tr><td>2003&ndash;2007</td><td>University of Cambridge, Department of Engineering&mdash;PhD.</td></tr>
-  <tr><td>1996&ndash;2000</td><td>University of Cambridge&mdash;BA MEng Manufacturing Engineering Tripos 1st class.</td></tr>
-  <tr><td>1990&ndash;1995</td><td>Millfield School, Somerset, UK&mdash;Scholarship, 10 GCSEs &amp; 4&half; A-levels at grade A.</td></tr>
-</table>
+		<table>
+			<tr>
+				<td>2003&ndash;2007</td>
+				<td>University of Cambridge, Department of Engineering&mdash;PhD.</td>
+			</tr>
+			<tr>
+				<td>1996&ndash;2000</td>
+				<td>University of Cambridge&mdash;BA MEng Manufacturing Engineering Tripos 1st class.</td>
+			</tr>
+			<tr>
+				<td>1990&ndash;1995</td>
+				<td>Millfield School, Somerset, UK&mdash;Scholarship, 10 GCSEs &amp; 4&half; A-levels at grade A.</td>
+			</tr>
+		</table>
 
-<h2>CHIEF ENGINEER (2015&ndash;)</h2>
+		<h2>CHIEF ENGINEER (2015&ndash;)</h2>
 
-<p>I help a small firm to make a difference to the way that children's nurseries & primary schools help their kids to develop.</p>
+		<p>Our firm, The Foundation Stage Forum, helps nurseries & primary schools to nurture their kids and connect
+			with parents.</p>
 
-<p>I am in charge of the firm's product (known as Tapestry), £1&thinsp;million infrastructure spend, and nine software engineers. I work directly with the founders on most aspects of the business. I have helped them grow the business to care for just over a million children while remaining profitable, reliable, secure and loved.
+		<p>Until mid-2021, I was in charge of the firm's product (known as Tapestry), £1&thinsp;million annual
+			infrastructure
+			spend, and nine
+			software engineers. I worked directly with the founders on most aspects of the business and helped
+			them
+			grow the firm from a few people camped in the founder's house to a solid business that cares for just
+			over a million children while remaining profitable, reliable, secure and
+			loved.</p>
 
-<h2>CONSULTANT (2015&ndash;)</h2>
+		<p>In mid-2021, my wife fell seriously ill and I took a step back in order to care for her and for my children.
+			I remain involved and
+			love this business but no longer manage the team or product day-to-day.</p>
 
-<p>In my spare time, I provide advice and hands-on support to several groups: to fix troublesome analysis so that it provides useful answers and to present the results in a way that is engaging and useful. I have particular expertise in turning Excel-based analysis into interactive online tools.</p>
+		<h2>CONSULTANT (2015&ndash;)</h2>
 
-<h2>CIVIL SERVANT (2010&ndash;2015)</h2>
+		<p>In my spare time, I provide advice and hands-on support to several groups: to fix troublesome analysis so
+			that it provides useful answers and to present the results in a way that is engaging and useful. I have
+			particular expertise in turning Excel-based analysis into interactive online tools.</p>
 
-<p>I held five posts at the UK Department of Energy &amp; Climate Change</p>
+		<h2>CIVIL SERVANT (2010&ndash;2015)</h2>
 
-<h3>Deputy Director, Analysis</h3>
+		<p>I held five posts at the UK Department of Energy &amp; Climate Change</p>
 
-<p>Reporting to the Chief Economist, I acted as an analytic troubleshooter. In particular, I helped the team move from a traditional approach of considering a few long-range energy scenarios to being able to look for the common features, level of uncertainty and interesting exceptions amongst thousands of automatically generated scenarios.</p>
+		<h3>Deputy Director, Analysis</h3>
 
-<h3>Deputy Director, International Climate Change</h3>
+		<p>Reporting to the Chief Economist, I acted as an analytic troubleshooter. In particular, I helped the team
+			move from a traditional approach of considering a few long-range energy scenarios to being able to look for
+			the common features, level of uncertainty and interesting exceptions amongst thousands of automatically
+			generated scenarios.</p>
 
-<p>I ran a nine person team and £2&thinsp;million programme providing advice to other governments on how to think about the future of their energy systems. The team won a Civil Service Award, jointly with the Foreign Office, for their approach.</p>
+		<h3>Deputy Director, International Climate Change</h3>
 
-<p>Due to the departure of a colleague I also briefly &amp; simultaneously managed another team during a challenging period. I was responsible for an additional thirty staff and £200&thinsp;million of overseas development aid.</p>
+		<p>I ran a nine-person team and £2&thinsp;million programme providing advice to other governments on how to
+			think about the future of their energy systems. The team won a Civil Service Award, jointly with the Foreign
+			Office, for their approach.</p>
 
-<h3>Deputy Director, Strategy</h3>
+		<p>Due to the departure of a colleague I also briefly &amp; simultaneously managed another team during a
+			challenging period. I was responsible for an additional thirty staff and £200&thinsp;million of overseas
+			development aid.</p>
 
-<p>I ran a twelve person team that considered what needed to be done to meet the department's long term targets. The team won a Civil Service Award for its ground-breaking approach.</p>
+		<h3>Deputy Director, Strategy</h3>
 
-<h3>Grade 6, Head of Engineering Team</h3>
+		<p>I ran a twelve-person team that considered what needed to be done to meet the department's long term targets.
+			The team won a Civil Service Award for its ground-breaking approach.</p>
 
-<p>I formed and ran the Department of Energy &amp; Climate Change's first central engineering team. This team of ten spanned the engineering disciplines and provided technical advice to the department on carbon capture &amp; storage, bioenergy sustainability, nuclear research, spending to support innovation, the potential for energy demand reduction and the challenges of renewables deployment.</p>
+		<h3>Grade 6, Head of Engineering Team</h3>
 
-<h3>Grade 7, Assistant to the Chief Scientific Advisor</h3>
+		<p>I formed and ran the Department of Energy &amp; Climate Change's first central engineering team. This team of
+			ten spanned the engineering disciplines and provided technical advice to the department on carbon capture
+			&amp; storage, bioenergy sustainability, nuclear research, spending to support innovation, the potential for
+			energy demand reduction and the challenges of renewables deployment.</p>
 
-<p>I was recruited to the UK Department of Energy and Climate Change by David MacKay, the Chief Scientific Advisor, to work in his private office. I supported him with counsel, with rapid bits of analysis, in keeping track of initiatives inside and outside of the department and I represented him when he was unavailable.</p>
+		<h3>Grade 7, Assistant to the Chief Scientific Advisor</h3>
 
-<h2>STRATEGY MANAGER (2007&ndash;2010)</h2>
+		<p>I was recruited to the UK Department of Energy and Climate Change by David MacKay, the Chief Scientific
+			Advisor, to work in his private office. I supported him with counsel, with rapid bits of analysis, in
+			keeping track of initiatives inside and outside of the department and I represented him when he was
+			unavailable.</p>
 
-<p>I was appointed as a strategy associate and then promoted to strategy manager at the Carbon Trust. I managed internal and external staff to create well received publications on climate change topics (four on the EU ETS with Michael Grub, one on the impact of tackling climate change on shareholder value and one on the scale of emissions triggered abroad by UK consumption of goods) and to help the CEO and COO to define elements of the Carbon Trust’s organisation and strategy (for example, how should the Carbon Trust support other governments in setting up Carbon Trust-like organisations? What could the Carbon Trust do to stimulate a green economic recovery?). I represented the Carbon Trust to industry and to government in the UK and abroad. I kept Carbon Trust staff briefed on policy developments, such as the work of the Climate Change Committee, the carbon targets and budgets, and the Low Carbon Transition Plan.</p>
+		<h2>STRATEGY MANAGER (2007&ndash;2010)</h2>
 
-<h2>ENGINEERING RESEARCHER (2003&ndash;2007)</h2>
-<p>I completed a PhD under the supervision of Dr Julian Allwood at the Department of Engineering at the University of Cambridge. I won personal funding for the research which considered whether it would be possible
-to remove print from paper in a way that would allow used sheets to be fed back into a printer and immediately reused. During this research I explored three distinct fields: solvents, in collaboration with the Department of Chemistry; lasers, in collaboration with the Bavarian Laser Centre and the Centre for Industrial Photonics; and high speed wear, in collaboration with the Production Processes Group. I published four peer-reviewed journal articles. </p>
+		<p>I was appointed as a strategy associate and then promoted to strategy manager at the Carbon Trust. I managed
+			internal and external staff to create well received publications on climate change topics (four on the EU
+			ETS with Michael Grub, one on the impact of tackling climate change on shareholder value and one on the
+			scale of emissions triggered abroad by UK consumption of goods) and to help the CEO and COO to define
+			elements of the Carbon Trust’s organisation and strategy (for example, how should the Carbon Trust support
+			other governments in setting up Carbon Trust-like organisations? What could the Carbon Trust do to stimulate
+			a green economic recovery?). I represented the Carbon Trust to industry and to government in the UK and
+			abroad. I kept Carbon Trust staff briefed on policy developments, such as the work of the Climate Change
+			Committee, the carbon targets and budgets, and the Low Carbon Transition Plan.</p>
 
-<h2>ENGINEERING TEACHER (2003&ndash;2007)</h2>
+		<h2>ENGINEERING RESEARCHER (2003&ndash;2007)</h2>
+		<p>I completed a PhD under the supervision of Dr Julian Allwood at the Department of Engineering at the
+			University of Cambridge. I won personal funding for the research which considered whether it would be
+			possible
+			to remove print from paper in a way that would allow used sheets to be fed back into a printer and
+			immediately reused. During this research I explored three distinct fields: solvents, in collaboration with
+			the Department of Chemistry; lasers, in collaboration with the Bavarian Laser Centre and the Centre for
+			Industrial Photonics; and high speed wear, in collaboration with the Production Processes Group. I published
+			four peer-reviewed journal articles. </p>
 
-<p>I was appointed as a teaching assistant at the Cambridge University Engineering Department. I led visits, practicals, workshops and educational games for third- and fourth-year engineering students. I marked essays. I prepared and delivered lectures on, for example, industrial sustainability, the Toyota Production System, and process mapping. I supervised undergraduate engineers on materials science, on the organisation and control of manufacturing systems and on mathematics.</p>
+		<h2>ENGINEERING TEACHER (2003&ndash;2007)</h2>
 
-<h2>STRATEGY CONSULTANT (2000&ndash;2003)</h2>
-<p>I was appointed as an associate consultant and then promoted to consultant (their post-MBA level) at Marakon Associates. I managed small consulting teams and large groups of clients to answer questions of strategy and organisation. For example: I helped the CEO of a Canadian chocolate business to cut costs; I helped the CEO of an over the counter drugs business to understand the options for the growth, merger or sale of his business; and I helped a wholesale bank to fix its ineffective, multi-country, matrix organisation. My role became one of analytical trouble-shooter sent in to give drifting projects traction. Most work was done overseas.</p>
+		<p>I was appointed as a teaching assistant at the Cambridge University Engineering Department. I led visits,
+			practicals, workshops and educational games for third- and fourth-year engineering students. I marked
+			essays. I prepared and delivered lectures on, for example, industrial sustainability, the Toyota Production
+			System, and process mapping. I supervised undergraduate engineers on materials science, on the organisation
+			and control of manufacturing systems and on mathematics.</p>
 
-<h2>SOFTWARE ENGINEER  (1995&ndash;)</h2>
-<p>While studying, I ran a small software business. I developed: one of the first content management systems for the web; a prototype electronic health record system; several platforms for booking events; several wikis; a popular system for finding out what seminars and talks are happening at the University of Cambridge; and an iPhone application to help breastfeeding mothers.</p>
+		<h2>STRATEGY CONSULTANT (2000&ndash;2003)</h2>
+		<p>I was appointed as an associate consultant and then promoted to consultant (their post-MBA level) at Marakon
+			Associates. I managed small consulting teams and large groups of clients to answer questions of strategy and
+			organisation. For example: I helped the CEO of a Canadian chocolate business to cut costs; I helped the CEO
+			of an over the counter drugs business to understand the options for the growth, merger or sale of his
+			business; and I helped a wholesale bank to fix its ineffective, multi-country, matrix organisation. My role
+			became one of analytical trouble-shooter sent in to give drifting projects traction. Most work was done
+			overseas.</p>
 
-<h2>PROJECT MANAGER (1995&ndash;2000)</h2>
-<p>I was sponsored through university as a project manager in the Defence Engineering and Science Group, part of the Ministry of Defence. I ran small technical projects for Westland aerospace special projects; the Guided Weapons and Surveillance Technical Support group and the Battle Group Battle Management Systems team.</p>
-</div>
+		<h2>SOFTWARE ENGINEER (1995&ndash;)</h2>
+		<p>While studying, I ran a small software business. I developed: one of the first content management systems for
+			the web; a prototype electronic health record system; several platforms for booking events; several wikis; a
+			popular system for finding out what seminars and talks are happening at the University of Cambridge; and an
+			iPhone application to help breastfeeding mothers.</p>
+
+		<h2>PROJECT MANAGER (1995&ndash;2000)</h2>
+		<p>I was sponsored through university as a project manager in the Defence Engineering and Science Group, part of
+			the Ministry of Defence. I ran small technical projects for Westland aerospace special projects; the Guided
+			Weapons and Surveillance Technical Support group and the Battle Group Battle Management Systems team.</p>
+	</div>
 </body>
+
 </html>
