Update for move to GiveDirectly

--- a/public/cv.html
+++ b/public/cv.html
@@ -32,29 +32,26 @@
 			</tr>
 		</table>
 
-		<h2>CHIEF ENGINEER (2015&ndash;)</h2>
+    <h2>SENIOR ENGINEER (2022&ndash;)</h2>
 
-		<p>Our firm, The Foundation Stage Forum, helps nurseries & primary schools to nurture their kids and connect
-			with parents.</p>
-
-		<p>Until mid-2021, I was in charge of the firm's product (known as Tapestry), £1&thinsp;million annual
-			infrastructure
-			spend, and nine
-			software engineers. I worked directly with the founders on most aspects of the business and helped
-			them
-			grow the firm from a few people camped in the founder's house to a solid business that cares for just
-			over a million children while remaining profitable, reliable, secure and
-			loved.</p>
-
-		<p>In mid-2021, my wife fell seriously ill and I took a step back in order to care for her and for my children.
-			I remain involved and
-			love this business but no longer manage the team or product day-to-day.</p>
+    <p>I work for <a href='https://givedirectly.org'>GiveDirectly</a>, a charity that gives cash to those in poverty, mostly in East Africa.</p>
 
 		<h2>CONSULTANT (2015&ndash;)</h2>
 
 		<p>In my spare time, I provide advice and hands-on support to several groups: to fix troublesome analysis so
 			that it provides useful answers and to present the results in a way that is engaging and useful. I have
 			particular expertise in turning Excel-based analysis into interactive online tools.</p>
+
+		<h2>CHIEF ENGINEER (2015&ndash;2022)</h2>
+
+		<p>I worked for The Foundation Stage Forum, a firm who help nurseries & primary schools to nurture their kids and connect
+			with parents.</p>
+
+		<p>I was in charge of the firm's product (known as Tapestry), £1&thinsp;million annual infrastructure spend, and nine
+    software engineers. I worked directly with the founders on most aspects of the business and helped them
+			grow the firm from a few people camped in the founder's house to a solid business that cares for just
+			over a million children while remaining profitable, reliable, secure and
+			loved.</p>
 
 		<h2>CIVIL SERVANT (2010&ndash;2015)</h2>
 
