--- a/public/gd.html
+++ b/public/gd.html
@@ -4,4 +4,4 @@
   <h1>This is a demo page for development purposes</h1>
   <donation-amount-picker id="donation-amount-picker-with-redirect" data-show-dedicate="true"
     data-redirect-to="https://donate.devdirectly.org/payment-methods"></donation-amount-picker>
-  <script type="module" src="donate.givedirectly.org/embed/main.js"></script>
+  <script type="module" src="https://donate.givedirectly.org/embed/main.js"></script>
