--- a/public/cv.html
+++ b/public/cv.html
@@ -11,7 +11,7 @@
 
 <body>
 	<h1>Dr Thomas Counsell</h1>
-	<p id='contact'>65 Coventry Street, BN1 5PP&mdash; tom@counsell.org &mdash; 07976 360 423</p>
+	<p id='contact'>65 Coventry Street, Brighton, BN1 5PP, UK &mdash; tom@counsell.org &mdash; +44 7976 360 423</p>
 
 	<div id='content'>
 
@@ -32,26 +32,36 @@
 			</tr>
 		</table>
 
-    <h2>SENIOR ENGINEER (2022&ndash;)</h2>
+		<h2>SENIOR ENGINEER (2022&ndash;)</h2>
 
-    <p>I work for <a href='https://givedirectly.org'>GiveDirectly</a>, a charity that gives cash to those in poverty, mostly in East Africa.</p>
+		<p>I work for <a href='https://givedirectly.org'>GiveDirectly</a>, a charity that gives cash to those in poverty,
+			mostly in Africa.</p>
 
-		<h2>CONSULTANT (2015&ndash;)</h2>
-
-		<p>In my spare time, I provide advice and hands-on support to several groups: to fix troublesome analysis so
-			that it provides useful answers and to present the results in a way that is engaging and useful. I have
-			particular expertise in turning Excel-based analysis into interactive online tools.</p>
+		<p>I work mostly on fundraising, mostly on the $30&thinsp;million donations we receive each year from small donors.
+			I help increase donations, give the donors a good experience, mitigate fraud and ensure we know who our donors
+			are.
+			I took over a mess of legacy and volunteer created systems, and after a year I was promoted to be in charge of the
+			(tiny) fundraising-tech team.</p>
 
 		<h2>CHIEF ENGINEER (2015&ndash;2022)</h2>
 
-		<p>I worked for The Foundation Stage Forum, a firm who help nurseries & primary schools to nurture their kids and connect
+		<p>I worked for The Foundation Stage Forum, a firm who help nurseries & primary schools to nurture their kids and
+			connect
 			with parents.</p>
 
-		<p>I was in charge of the firm's product (known as Tapestry), £1&thinsp;million annual infrastructure spend, and nine
-    software engineers. I worked directly with the founders on most aspects of the business and helped them
+		<p>I was in charge of the firm's product (known as Tapestry), £1&thinsp;million annual infrastructure spend, and
+			nine
+			software engineers. I worked directly with the founders on most aspects of the business and helped them
 			grow the firm from a few people camped in the founder's house to a solid business that cares for just
 			over a million children while remaining profitable, reliable, secure and
 			loved.</p>
+
+		<h2>CONSULTANT (2015&ndash;2022)</h2>
+
+		<p>In my spare time, I provided advice and hands-on support to several groups: to fix troublesome analysis so
+			that it provides useful answers and to present the results in a way that is engaging and useful. I had
+			particular expertise in turning Excel-based analysis into interactive online tools.</p>
+
 
 		<h2>CIVIL SERVANT (2010&ndash;2015)</h2>
 
@@ -132,7 +142,7 @@
 			became one of analytical trouble-shooter sent in to give drifting projects traction. Most work was done
 			overseas.</p>
 
-		<h2>SOFTWARE ENGINEER (1995&ndash;)</h2>
+		<h2>SOFTWARE ENGINEER (1995&ndash;2010)</h2>
 		<p>While studying, I ran a small software business. I developed: one of the first content management systems for
 			the web; a prototype electronic health record system; several platforms for booking events; several wikis; a
 			popular system for finding out what seminars and talks are happening at the University of Cambridge; and an
