--- a/public/cv.html
+++ b/public/cv.html
@@ -37,30 +37,20 @@
 		<p>I work for <a href='https://givedirectly.org'>GiveDirectly</a>, a charity that gives cash to those in poverty,
 			mostly in Africa.</p>
 
-		<p>I work mostly on fundraising, mostly on the $30&thinsp;million donations we receive each year from small donors.
-			I help increase donations, give the donors a good experience, mitigate fraud and ensure we know who our donors
-			are.
-			I took over a mess of legacy and volunteer created systems, and after a year I was promoted to be in charge of the
-			(tiny) fundraising-tech team.</p>
+		<p>I work mostly on fundraising, mostly on the $46&thinsp;million in donations we receive each year from small
+			donors. I write tools to give our donors a good experience, ensure we know who they are, reduce fraud and,
+			increasingly, internal tools to reduce our costs. I took over a mess of legacy and volunteer created systems,
+			and after a year I was promoted to be in charge of the (tiny) fundraising-tech team.</p>
 
 		<h2>CHIEF ENGINEER (2015&ndash;2022)</h2>
 
 		<p>I worked for The Foundation Stage Forum, a firm who help nurseries & primary schools to nurture their kids and
-			connect
-			with parents.</p>
+			connect with parents.</p>
 
 		<p>I was in charge of the firm's product (known as Tapestry), £1&thinsp;million annual infrastructure spend, and
-			nine
-			software engineers. I worked directly with the founders on most aspects of the business and helped them
+			nine software engineers. I worked directly with the founders on most aspects of the business and helped them
 			grow the firm from a few people camped in the founder's house to a solid business that cares for just
-			over a million children while remaining profitable, reliable, secure and
-			loved.</p>
-
-		<h2>CONSULTANT (2015&ndash;2022)</h2>
-
-		<p>In my spare time, I provided advice and hands-on support to several groups: to fix troublesome analysis so
-			that it provides useful answers and to present the results in a way that is engaging and useful. I had
-			particular expertise in turning Excel-based analysis into interactive online tools.</p>
+			over a million children while remaining profitable, reliable, secure and loved.</p>
 
 
 		<h2>CIVIL SERVANT (2010&ndash;2015)</h2>
@@ -78,7 +68,7 @@
 
 		<p>I ran a nine-person team and £2&thinsp;million programme providing advice to other governments on how to
 			think about the future of their energy systems. The team won a Civil Service Award, jointly with the Foreign
-			Office, for their approach.</p>
+			Office, for their approach, which relied on tools, techniques and code I co-developed and open-sourced.</p>
 
 		<p>Due to the departure of a colleague I also briefly &amp; simultaneously managed another team during a
 			challenging period. I was responsible for an additional thirty staff and £200&thinsp;million of overseas
@@ -106,49 +96,41 @@
 		<h2>STRATEGY MANAGER (2007&ndash;2010)</h2>
 
 		<p>I was appointed as a strategy associate and then promoted to strategy manager at the Carbon Trust. I managed
-			internal and external staff to create well received publications on climate change topics (four on the EU
-			ETS with Michael Grub, one on the impact of tackling climate change on shareholder value and one on the
-			scale of emissions triggered abroad by UK consumption of goods) and to help the CEO and COO to define
-			elements of the Carbon Trust’s organisation and strategy (for example, how should the Carbon Trust support
-			other governments in setting up Carbon Trust-like organisations? What could the Carbon Trust do to stimulate
-			a green economic recovery?). I represented the Carbon Trust to industry and to government in the UK and
-			abroad. I kept Carbon Trust staff briefed on policy developments, such as the work of the Climate Change
-			Committee, the carbon targets and budgets, and the Low Carbon Transition Plan.</p>
+			internal and external staff to create well received publications on climate change topics and to help the CEO
+			and COO to define elements of the Carbon Trust’s organisation and strategy. I represented the Carbon Trust
+			to industry and to government in the UK and abroad. I kept Carbon Trust staff briefed on policy developments,
+			such as the work of the Climate Change Committee, the carbon targets and budgets, and the Low Carbon Transition
+			Plan.</p>
 
 		<h2>ENGINEERING RESEARCHER (2003&ndash;2007)</h2>
+
 		<p>I completed a PhD under the supervision of Dr Julian Allwood at the Department of Engineering at the
-			University of Cambridge. I won personal funding for the research which considered whether it would be
-			possible
+			University of Cambridge. I won personal funding for the research which considered whether it would be possible
 			to remove print from paper in a way that would allow used sheets to be fed back into a printer and
-			immediately reused. During this research I explored three distinct fields: solvents, in collaboration with
-			the Department of Chemistry; lasers, in collaboration with the Bavarian Laser Centre and the Centre for
-			Industrial Photonics; and high speed wear, in collaboration with the Production Processes Group. I published
-			four peer-reviewed journal articles. </p>
+			immediately reused. I published four peer-reviewed journal articles. </p>
 
 		<h2>ENGINEERING TEACHER (2003&ndash;2007)</h2>
 
 		<p>I was appointed as a teaching assistant at the Cambridge University Engineering Department. I led visits,
 			practicals, workshops and educational games for third- and fourth-year engineering students. I marked
-			essays. I prepared and delivered lectures on, for example, industrial sustainability, the Toyota Production
-			System, and process mapping. I supervised undergraduate engineers on materials science, on the organisation
-			and control of manufacturing systems and on mathematics.</p>
+			essays. I prepared and delivered lectures and supervised undergraduate engineers.</p>
 
 		<h2>STRATEGY CONSULTANT (2000&ndash;2003)</h2>
+
 		<p>I was appointed as an associate consultant and then promoted to consultant (their post-MBA level) at Marakon
 			Associates. I managed small consulting teams and large groups of clients to answer questions of strategy and
-			organisation. For example: I helped the CEO of a Canadian chocolate business to cut costs; I helped the CEO
-			of an over the counter drugs business to understand the options for the growth, merger or sale of his
-			business; and I helped a wholesale bank to fix its ineffective, multi-country, matrix organisation. My role
-			became one of analytical trouble-shooter sent in to give drifting projects traction. Most work was done
-			overseas.</p>
+			organisation. My role became one of analytical trouble-shooter sent in to give drifting projects traction.
+			Most work was done overseas.</p>
 
 		<h2>SOFTWARE ENGINEER (1995&ndash;2010)</h2>
+
 		<p>While studying, I ran a small software business. I developed: one of the first content management systems for
 			the web; a prototype electronic health record system; several platforms for booking events; several wikis; a
 			popular system for finding out what seminars and talks are happening at the University of Cambridge; and an
 			iPhone application to help breastfeeding mothers.</p>
 
 		<h2>PROJECT MANAGER (1995&ndash;2000)</h2>
+
 		<p>I was sponsored through university as a project manager in the Defence Engineering and Science Group, part of
 			the Ministry of Defence. I ran small technical projects for Westland aerospace special projects; the Guided
 			Weapons and Surveillance Technical Support group and the Battle Group Battle Management Systems team.</p>
