--- a/public/cv.html
+++ b/public/cv.html
@@ -3,10 +3,8 @@
 <head>
 	<meta http-equiv="Content-Type" content="text/html; charset=utf-8">
 	<link href="cv.css" media="screen" rel="stylesheet" type="text/css">
-	</link>
 	<link href="cv.css" media="print" rel="stylesheet" type="text/css">
-	</link>
-	<title>CV Thomas Counsell Dec 2021</title>
+	<title>CV Thomas Counsell Jan 2026</title>
 </head>
 
 <body>
@@ -38,28 +36,28 @@
 			mostly in Africa.</p>
 
 		<p>I work mostly on fundraising, mostly on the $46&thinsp;million in donations we receive each year from small
-			donors. I write tools to give our donors a good experience, ensure we know who they are, reduce fraud and,
-			increasingly, internal tools to reduce our costs. I took over a mess of legacy and volunteer created systems,
+			donors. I write code to give our donors a good experience, ensure we know who they are, reduce fraud and,
+			increasingly, internal tools to reduce our costs. I took over a mess of legacy and volunteer-created systems,
 			and after a year I was promoted to be in charge of the (tiny) fundraising-tech team.</p>
 
 		<h2>CHIEF ENGINEER (2015&ndash;2022)</h2>
 
-		<p>I worked for The Foundation Stage Forum, a firm who help nurseries & primary schools to nurture their kids and
+		<p>I worked for The Foundation Stage Forum, a firm that helps nurseries & primary schools to nurture their kids and
 			connect with parents.</p>
 
 		<p>I was in charge of the firm's product (known as Tapestry), £1&thinsp;million annual infrastructure spend, and
-			nine software engineers. I worked directly with the founders on most aspects of the business and helped them
-			grow the firm from a few people camped in the founder's house to a solid business that cares for just
+			nine software engineers. I worked directly with the founders on most aspects of the business, writing code that
+			helped them grow the firm from a few people camped in the founders' house to a solid business that cares for just
 			over a million children while remaining profitable, reliable, secure and loved.</p>
-
 
 		<h2>CIVIL SERVANT (2010&ndash;2015)</h2>
 
-		<p>I held five posts at the UK Department of Energy &amp; Climate Change</p>
+		<p>I held five posts at the UK Department of Energy &amp; Climate Change:</p>
 
 		<h3>Deputy Director, Analysis</h3>
 
-		<p>Reporting to the Chief Economist, I acted as an analytic troubleshooter. In particular, I helped the team
+		<p>Reporting to the Chief Economist, I acted as an analytic troubleshooter. In particular, I wrote code to help the
+			team
 			move from a traditional approach of considering a few long-range energy scenarios to being able to look for
 			the common features, level of uncertainty and interesting exceptions amongst thousands of automatically
 			generated scenarios.</p>
@@ -76,8 +74,9 @@
 
 		<h3>Deputy Director, Strategy</h3>
 
-		<p>I ran a twelve-person team that considered what needed to be done to meet the department's long term targets.
-			The team won a Civil Service Award for its ground-breaking approach.</p>
+		<p>I ran a twelve-person team that considered what needed to be done to meet the department's long-term targets.
+			The team won a Civil Service Award for its ground-breaking approach which relied, in part, on code I developed.
+		</p>
 
 		<h3>Grade 6, Head of Engineering Team</h3>
 
@@ -88,15 +87,14 @@
 
 		<h3>Grade 7, Assistant to the Chief Scientific Advisor</h3>
 
-		<p>I was recruited to the UK Department of Energy and Climate Change by David MacKay, the Chief Scientific
-			Advisor, to work in his private office. I supported him with counsel, with rapid bits of analysis, in
-			keeping track of initiatives inside and outside of the department and I represented him when he was
-			unavailable.</p>
+		<p>I was recruited to the UK Department of Energy &amp;Climate Change by David MacKay, the Chief Scientific
+			Advisor, to work in his private office. I supported him with counsel and rapid analysis, helped
+			track initiatives inside and outside of the department and represented him when he was unavailable.</p>
 
 		<h2>STRATEGY MANAGER (2007&ndash;2010)</h2>
 
 		<p>I was appointed as a strategy associate and then promoted to strategy manager at the Carbon Trust. I managed
-			internal and external staff to create well received publications on climate change topics and to help the CEO
+			internal and external staff to create well-received publications on climate change topics and to help the CEO
 			and COO to define elements of the Carbon Trust’s organisation and strategy. I represented the Carbon Trust
 			to industry and to government in the UK and abroad. I kept Carbon Trust staff briefed on policy developments,
 			such as the work of the Climate Change Committee, the carbon targets and budgets, and the Low Carbon Transition
@@ -119,7 +117,7 @@
 
 		<p>I was appointed as an associate consultant and then promoted to consultant (their post-MBA level) at Marakon
 			Associates. I managed small consulting teams and large groups of clients to answer questions of strategy and
-			organisation. My role became one of analytical trouble-shooter sent in to give drifting projects traction.
+			organisation. My role became one of analytical troubleshooter sent in to give drifting projects traction.
 			Most work was done overseas.</p>
 
 		<h2>SOFTWARE ENGINEER (1995&ndash;2010)</h2>
