--- a/public/cv.html
+++ b/public/cv.html
@@ -132,7 +132,13 @@
 		<p>I was sponsored through university as a project manager in the Defence Engineering and Science Group, part of
 			the Ministry of Defence. I ran small technical projects for Westland aerospace special projects; the Guided
 			Weapons and Surveillance Technical Support group and the Battle Group Battle Management Systems team.</p>
+
+		<p>
+			<a href='https://github.com/tamc'>https://github.com/tamc</a>
+			<a href='https://tom.counsell.org'>https://tom.counsell.org</a>
+		</p>
 	</div>
+
 </body>
 
 </html>
