--- a/public/index.html
+++ b/public/index.html
@@ -58,6 +58,9 @@ at <a href="mailto:tom@counsell.org"
 class="email">tom@counsell.org</a>.</p>
 <h2 id="news">News</h2>
 <ol type="1">
+<li>My wife, <a
+href="https://easst.net/easst-review/44-1/catherine-will-symposium/">Professor
+Catherine Marijke Will</a> died. Life is tough.</li>
 <li>I’ve enjoyed making a <a
 href="programming/usermeter/index.html">server load monitor</a> out of a
 65 year old ammeter for my boss.</li>
